--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "commander": "^4.0.1",
     "figlet": "^1.2.4",
     "inquirer": "^7.0.0",
+    "mongodb": "^3.3.4",
     "shelljs": "^0.8.3"
   }
 }
